--- a/documentation/docs/persistence/mongoose/relations.mdx
+++ b/documentation/docs/persistence/mongoose/relations.mdx
@@ -122,7 +122,7 @@ Now that we have the relationship defined we can add the `@Relation` and `@Curso
 <TabItem value="todoitem">
 
 ```ts title="todo-item/todo-item.dto.ts"
-import { FilterableField, KeySet, CursorConnection } from '@nestjs-query/query-graphql';
+import { FilterableField, IDField, KeySet, CursorConnection } from '@nestjs-query/query-graphql';
 import { ObjectType, ID, GraphQLISODateTime, Field } from '@nestjs/graphql';
 import { SubTaskDTO } from '../../sub-task/dto/sub-task.dto';
 
@@ -131,7 +131,7 @@ import { SubTaskDTO } from '../../sub-task/dto/sub-task.dto';
 // disable the remove because mongoose does not support removing a virtual
 @CursorConnection('subTasks', () => SubTaskDTO, { disableRemove: true })
 export class TodoItemDTO {
-  @FilterableField(() => ID)
+  @IDField(() => ID)
   id!: string;
 
   @FilterableField()
@@ -168,7 +168,7 @@ export class TodoItemDTO {
 <TabItem value="subtask">
 
 ```ts title="sub-task/sub-task.dto.ts"
-import { FilterableField, KeySet, Relation } from '@nestjs-query/query-graphql';
+import { FilterableField, IDField, KeySet, Relation } from '@nestjs-query/query-graphql';
 import { ObjectType, ID, GraphQLISODateTime } from '@nestjs/graphql';
 import { TodoItemDTO } from '../../todo-item/dto/todo-item.dto';
 
@@ -177,7 +177,7 @@ import { TodoItemDTO } from '../../todo-item/dto/todo-item.dto';
 // disable the remove because a sub task cannot exist without a todoitem
 @Relation('todoItem', () => TodoItemDTO, { disableRemove: true })
 export class SubTaskDTO {
-  @FilterableField(() => ID)
+  @IDField(() => ID)
   id!: string;
 
   @FilterableField()
@@ -307,7 +307,7 @@ Now that we have the relationship defined we can add the `@CursorConnection` to 
 <TabItem value="todoitem">
 
 ```ts title="todo-item/todo-item.dto.ts"
-import { FilterableField, KeySet, CursorConnection } from '@nestjs-query/query-graphql';
+import { FilterableField, IDField, KeySet, CursorConnection } from '@nestjs-query/query-graphql';
 import { ObjectType, ID, GraphQLISODateTime, Field } from '@nestjs/graphql';
 import { TagDTO } from '../../tag/dto/tag.dto';
 
@@ -315,7 +315,7 @@ import { TagDTO } from '../../tag/dto/tag.dto';
 @KeySet(['id'])
 @CursorConnection('tags', () => TagDTO)
 export class TodoItemDTO {
-  @FilterableField(() => ID)
+  @IDField(() => ID)
   id!: string;
 
   @FilterableField()
@@ -351,7 +351,7 @@ export class TodoItemDTO {
 <TabItem value="tag">
 
 ```ts title="tag/tag.dto.ts"
-import { FilterableField, KeySet, CursorConnection } from '@nestjs-query/query-graphql';
+import { FilterableField, IDField, KeySet, CursorConnection } from '@nestjs-query/query-graphql';
 import { ObjectType, ID, GraphQLISODateTime } from '@nestjs/graphql';
 import { TodoItemDTO } from '../../todo-item/dto/todo-item.dto';
 
@@ -360,7 +360,7 @@ import { TodoItemDTO } from '../../todo-item/dto/todo-item.dto';
 // disable update and remove since it is a virtual in the entity
 @CursorConnection('todoItems', () => TodoItemDTO, { disableUpdate: true, disableRemove: true })
 export class TagDTO {
-  @FilterableField(() => ID)
+  @IDField(() => ID)
   id!: string;
 
   @FilterableField()
