--- a/documentation/docs/persistence/typegoose/relations.mdx
+++ b/documentation/docs/persistence/typegoose/relations.mdx
@@ -17,7 +17,7 @@ There are multiple ways to set of references in Typegoose. These are intended as
 Filtering on references is not supported by Typegoose.
 :::
 
-## One to Many/Many To One Example
+## One to Many/One To One Example
 
 To set up a one to many/many to one relationship in Typegoose, you will store a reference in your document.
 
